# dbsearch-rs

./: .gitignore  README.md
chatgpt-embed-rs/src/: client.rs
client/: Cargo.toml  config.yml
client/chatgpt-embed-rs/src/: config.rs  types.rs
client/src/: embed.rs  hashes.rs  main.rs  pdf.rs  redis_util.rs  search.rs  text.rs
src/: main.rs  math.rs  text.rs
