[package]
name = "dbsearch"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.0", features = ["derive"] }
regex = "1.5.4"
pdf-extract = "0.7.4"
datasize = "0.2.13"
image = "*"
tokio = { version = "1", features = ["full"] }
chatgpt_rs = { path = "../chatgpt-embed-rs" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "*"
serde_yaml = "*"
rayon = "1.5"
redis = { version = "0.25.4", features = ["json", "tokio-comp", "aio"] }
sha2 = "0.10.8"
